# openai-buildweek

./: .gitignore  AGENTS.md  COPY.md  README.md
__grounding/: ARCHITECTURE.md  BRANDS.md  CASTING.md  DESIGN_PRINCIPLES.md  DEV_DAY_IMAGE_GENERATION.md  FASHION_PRODUCT_RESEARCH.md  ICONOGRAPHY.md  IMAGE_ITERATION.md  INSPIRATION_ADJACENT_450.json  INSPIRATION_CANDIDATES.json  INSPIRATION_CORE_150.json  PRODUCT.md  README.md  SOUND.md  SOURCES.md
__grounding/brands/a-cold-wall/: README.md
__grounding/brands/acne-studios/: README.md
__grounding/brands/balenciaga/: README.md
__harness/: README.md
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ChatDock.tsx  (+10 more)
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: build_reference_seeds.py  cache_product_images.py  normalize_product_catalog.py
backend/seeds/: ICONOGRAPHY.md  casting_presets.json  product_inspiration.json  reference_catalog.json
backend/src/somethings_on/: __init__.py  casting.py  chat_server.py  chat_store.py  config.py  demo_seed.py  design_agent.py  design_store.py  image_service.py  main.py  models.py  product_catalog.py  product_image_cache.py  reference_catalog.py
backend/tests/: test_api.py  test_casting.py  test_chat_server.py  test_chat_store.py  test_config.py  test_design_agent.py  test_design_candidates.py  test_design_service.py  test_devday_seed.py  test_image_provider.py  test_product_catalog.py  test_product_image_cache.py  test_reference_catalog.py  test_technical_views.py
(+76 files in other folders)
