[project]
name = "somethings-on-backend"
version = "0.1.0"
description = "FastAPI, ChatKit, and Agents SDK service for SOMETHINGS-ON"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "aiosqlite",
  "fastapi",
  "lancedb==0.29.2",
  "openai>=2",
  "openai-agents",
  "openai-chatkit",
  "pillow",
  "pydantic-settings",
  "python-multipart",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/somethings_on"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
